Add three views and cleaned up some things.

--- a/resources/public/partials/facilities.html
+++ b/resources/public/partials/facilities.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <input class="input-block-level" type="text" ng-model="query"
+  <input class="input-block-level input-xlarge" type="text" ng-model="query"
          placeholder="Filter list">
     
   <ul class="simple">
