--- a/resources/public/css/abqfood.css
+++ b/resources/public/css/abqfood.css
@@ -1,3 +1,13 @@
+body {
+    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
+
+div.navbar a.brand {
+    text-align: center;
+    width: 100%;
+    color: #fff;
+}
+
 ul.simple {
     list-style-type: none;
     margin: 0;
